src/objects/Global_Rewards_Group__c.object
<CustomObject>
    <description>Parent object in a relationship that groups multiple Business/Practice Accounts under one Global Rewards Program (child object is Global Rewards Group Relationship)</description>
    <fields>
        <fullName>Applied_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applied Tier</label>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipLabel>Global Rewards Groups</relationshipLabel>
        <relationshipName>Global_Rewards_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Tiering_Eyewear_Spend_LTM__c</fullName>
        <inlineHelpText>Practice&apos;s spend on Eyewear divided by total number of locations</inlineHelpText>
        <label>Average Tiering Eyewear Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Tiering_Optics_Spend_LTM__c</fullName>
        <inlineHelpText>Practice&apos;s spend on Optics divided by total number of locations.</inlineHelpText>
        <label>Average Tiering Optics Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Tiering_Total_Spend_LTM__c</fullName>
        <inlineHelpText>Practice&apos;s spend on Eyewear and Optics divided by total number of locations</inlineHelpText>
        <label>Average Tiering Total Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculated Tier</label>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipLabel>Global Rewards Groups (Calculated Tier)</relationshipLabel>
        <relationshipName>Global_Rewards_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>AOP</fullName>
                </value>
                <value>
                    <fullName>CAT2</fullName>
                </value>
                <value>
                    <fullName>Conflict</fullName>
                </value>
                <value>
                    <fullName>GAP</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>LVC</fullName>
                </value>
                <value>
                    <fullName>Near Site</fullName>
                </value>
                <value>
                    <fullName>Net Dev Excluded</fullName>
                </value>
                <value>
                    <fullName>Net Dev Purchasing Requirement</fullName>
                </value>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Pearle Vision CO</fullName>
                </value>
                <value>
                    <fullName>Pearle Vision LO</fullName>
                </value>
                <value>
                    <fullName>Pop Up</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Visionworks</fullName>
                </value>
                <value>
                    <fullName>VSP Retail</fullName>
                </value>
                <value>
                    <fullName>VSP Ventures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EHM_Rate__c</fullName>
        <label>EHM Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusive_VSP_Patient_Offers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive VSP Patient Offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyewear_Sales_Needed_Display__c</fullName>
        <formula>IF( Marchon_Sales_Target__c !=0&amp;&amp;(Eyewear_Sales_Needed__c&gt;0), 
(&quot;$&quot; &amp; TEXT(Eyewear_Sales_Needed__c)  &amp; &quot; in next &quot; &amp; TEXT(Months_to_Check_In__c) &amp; &quot; months&quot;), 
&quot;$0&quot;)</formula>
        <label>Eyewear Sales Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyewear_Sales_Needed__c</fullName>
        <label>Eyewear Sales Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eyewear_Sales_Rolling_Off__c</fullName>
        <label>Eyewear Sales Rolling Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frame_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Frame Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Fitting_and_Adjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Fitting and Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marchon_Sales_Target__c</fullName>
        <label>Eyewear Sales Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon_and_Altair_Net_Sales_LTM__c</fullName>
        <label>Marchon and Altair Net Sales LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meets_Eyewear_Target__c</fullName>
        <formula>IF( Marchon_and_Altair_Net_Sales_LTM__c &gt;= Marchon_Sales_Target__c &amp;&amp; Marchon_Sales_Target__c != 0, True, False)</formula>
        <label>Meets Eyewear Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_UNITY_Target__c</fullName>
        <formula>IF( Optics_UNITY_Order_Count_LTM__c &gt;= UNITY_Pair_Target__c &amp;&amp; UNITY_Pair_Target__c != 0, True, False)</formula>
        <label>Meets UNITY Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months_to_Check_In__c</fullName>
        <formula>CASE( Premier_Reporting_Month__c , 
&apos;January&apos;, 5, 
&apos;February&apos;, 4, 
&apos;March&apos;, 3, 
&apos;April&apos;, 2, 
&apos;May&apos;, 1, 
&apos;June&apos;, 6, 
&apos;July&apos;, 5, 
&apos;August&apos;, 4, 
&apos;September&apos;, 3, 
&apos;October&apos;, 2, 
&apos;November&apos;, 1, 
&apos;December&apos;, 6, 
null)</formula>
        <label>Months to Check-In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optics_UNITY_Order_Count_LTM__c</fullName>
        <label>Premier UNITY Pair Count LTM</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Tier_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Tier Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Tax_ID__c</fullName>
        <formula>Parent_Account__r.Tax_ID__c</formula>
        <label>Parent Account Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Rewards Groups</relationshipLabel>
        <relationshipName>Global_Rewards_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premier_Exception_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Premier Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premier_Location_Count_Future__c</fullName>
        <inlineHelpText>Number of eligible locations</inlineHelpText>
        <label>Premier Location Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premier_Location_Count__c</fullName>
        <label>Premier Location Count</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premier_Reporting_Month__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Premier Reporting Month</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premier_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retinal_Imaging_Indicator_Future__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retinal Imaging Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retinal_Imaging_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retinal Imaging Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( OR( Start_Date__c = TODAY() , AND( Start_Date__c &lt; TODAY() , OR( End_Date__c &gt;= TODAY() , ISBLANK( End_Date__c ) ) ) ) , &quot;Active&quot;, &apos;Inactive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Agreement_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Agreement Type used to calculate the Premier Tier</inlineHelpText>
        <label>Tier Agreement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Net_Altair_Sales_LTM__c</fullName>
        <label>Total Net Altair Sales LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Marchon_Sales_LTM__c</fullName>
        <label>Total Net Marchon Sales LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Count_Rolling_Off__c</fullName>
        <label>UNITY Count Rolling Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Pair_Target__c</fullName>
        <label>UNITY Pair Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Pairs_Needed_Display__c</fullName>
        <formula>IF ( UNITY_Pair_Target__c != 0 &amp;&amp; ( UNITY_Pairs_Needed__c &gt;0),
(TEXT(UNITY_Pairs_Needed__c)  &amp; &quot; in next &quot;  &amp; TEXT(Months_to_Check_In__c)  &amp; &quot; months&quot;),
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UNITY Pairs Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Pairs_Needed__c</fullName>
        <label>UNITY Pairs Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Good_Standing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Care Good Standing</label>
        <type>Checkbox</type>
    </fields>
    <label>Global Rewards Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Rewards Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Rewards Groups</pluralLabel>
    <recordTypes>
        <fullName>Contract_Type</fullName>
        <active>true</active>
        <label>Contract Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_ID_Rollup</fullName>
        <active>true</active>
        <label>Tax ID Rollup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_ID_Rollup_Contract_Type</fullName>
        <active>true</active>
        <label>Tax ID Rollup &amp; Contract Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VSPR32_GRG_Applied_Tier_Validation</fullName>
        <active>true</active>
        <description>Applied Tier cannot be edited when Global Rewards Group Contract Type = Conflict, Rollup, or Blank</description>
        <errorConditionFormula>ISCHANGED(Applied_Tier__c) 
&amp;&amp;

(ISPICKVAL(Contract_Type__c, &apos;Conflict&apos;) || 
ISPICKVAL(Contract_Type__c, &apos;Rollup&apos;) ||
ISBLANK(TEXT(Contract_Type__c)))

&amp;&amp;
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>Applied_Tier__c</errorDisplayField>
        <errorMessage>Premier Tier was not calculated at this Global Rewards Group level. You must override the tier on the associated Global Rewards Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_Override_Effective_Date</fullName>
        <active>true</active>
        <description>Required when Applied Tier is manually edited. Effective date can only be a future date.</description>
        <errorConditionFormula>(ISCHANGED(Applied_Tier__c) 
||
ISCHANGED(Override_Effective_Date__c))	
&amp;&amp; 
(ISBLANK(Override_Effective_Date__c)
||
Override_Effective_Date__c &lt;= Today())
&amp;&amp; 
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;
))</errorConditionFormula>
        <errorDisplayField>Override_Effective_Date__c</errorDisplayField>
        <errorMessage>Override Tier Effective Date must be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_Override_End_Date</fullName>
        <active>true</active>
        <description>Required when Applied Tier is manually edited. End date can only be a future date.</description>
        <errorConditionFormula>(ISCHANGED(Applied_Tier__c)||
ISCHANGED(Override_End_Date__c))
&amp;&amp; 
(ISBLANK(Override_End_Date__c) ||
Override_End_Date__c &lt;= Override_Effective_Date__c || Override_End_Date__c &lt;=  TODAY() )
&amp;&amp; 
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>Override_End_Date__c</errorDisplayField>
        <errorMessage>Override Tier End Date must be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_Override_Reason</fullName>
        <active>true</active>
        <description>Required when Applied Tier is manually edited.</description>
        <errorConditionFormula>(ISCHANGED(Applied_Tier__c) ||
ISCHANGED(Override_Tier_Reason__c))
&amp;&amp;
ISBLANK(Override_Tier_Reason__c)
&amp;&amp; 
NOT(OR( $Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;
))</errorConditionFormula>
        <errorDisplayField>Override_Tier_Reason__c</errorDisplayField>
        <errorMessage>Required when Applied Tier is editied</errorMessage>
    </validationRules>
</CustomObject>